# jobops

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.assist  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: bootstrap.py  celery_app.py  config.py  db.py  logging.py  main.py  rescore.py  seeds.py  tasks.py
backend/app/adapters/: __init__.py  ashby.py  base.py  builtin_co.py  greenhouse.py  imap_alerts.py  lever.py  smartrecruiters.py
backend/app/api/: routes_health.py  routes_jobs.py  routes_panic.py  routes_policy.py  routes_reports.py  routes_review.py  routes_sources.py
backend/app/intake/: wiki_sync.py
backend/app/models/: __init__.py  applications.py  base.py  employers.py  jobs.py  ops.py  profile.py  scoring.py  sources.py
backend/app/panic/: service.py
backend/app/pipeline/: ats_detect.py  dedupe.py  ingest.py
backend/app/policy/: engine.py
backend/app/profile/: load_resume.py
backend/app/reporting/: emailer.py
backend/app/scoring/: engine.py  textmatch.py
backend/app/workflow/: cover_letter.py  manual_assist.py  packet.py  review.py  state_machine.py
backend/tests/: conftest.py  test_adapters.py  test_alert_parsing.py  test_ats_detect.py  test_manual_assist.py  test_policy.py  test_scoring.py  test_state_machine.py  test_workflow_integration.py
backend/tests/fixtures/: apply_form.html  greenhouse_jobs.json  lever_postings.json  linkedin_alert.html
docs/: DESIGN-PHASE5-PROFILES.md  DESIGN.md  interview-orchestrator.md
frontend/: Dockerfile  index.html  (+4 more)
(+9 files in other folders)
